@@ -25,24 +25,26 @@ function rng_seed_time() {
 }
 
 // Initialize the pool with junk if needed.
-if(rng_pool == null) {
+if (rng_pool == null) {
   rng_pool = new Array();
   rng_pptr = 0;
   var t;
-  if(window.crypto && window.crypto.getRandomValues) {
-    // Use webcrypto if available
-    var ua = new Uint8Array(32);
-    window.crypto.getRandomValues(ua);
-    for(t = 0; t < 32; ++t)
-      rng_pool[rng_pptr++] = ua[t];
-  }
-  if(navigator.appName == "Netscape" && navigator.appVersion < "5" && window.crypto && window.crypto.random) {
-    // Extract entropy (256 bits) from NS4 RNG if available
-    var z = window.crypto.random(32);
-    for(t = 0; t < z.length; ++t)
-      rng_pool[rng_pptr++] = z.charCodeAt(t) & 255;
+  if (typeof window !== "undefined") {
+    var crypto = window.crypto || window.msCrypto;
+    if (crypto.getRandomValues) {
+      // Use webcrypto if available
+      var ua = new Uint8Array(32);
+      crypto.getRandomValues(ua);
+      for(t = 0; t < 32; ++t)
+        rng_pool[rng_pptr++] = ua[t];
+    } else if(navigator.appName == "Netscape" && navigator.appVersion < "5") {
+      // Extract entropy (256 bits) from NS4 RNG if available
+      var z = window.crypto.random(32);
+      for(t = 0; t < z.length; ++t)
+        rng_pool[rng_pptr++] = z.charCodeAt(t) & 255;
+    }
   }  
-  while(rng_pptr < rng_psize) {  // extract some randomness from Math.random()
+  while (rng_pptr < rng_psize) {  // extract some randomness from Math.random()
     t = Math.floor(65536 * Math.random());
     rng_pool[rng_pptr++] = t >>> 8;
     rng_pool[rng_pptr++] = t & 255;
@@ -54,7 +56,7 @@ if(rng_pool == null) {
 }
 
 function rng_get_byte() {
-  if(rng_state == null) {
+  if (rng_state == null) {
     rng_seed_time();
     rng_state = prng_newstate();
     rng_state.init(rng_pool);
@@ -69,7 +71,7 @@ function rng_get_byte() {
 
 function rng_get_bytes(ba) {
   var i;
-  for(i = 0; i < ba.length; ++i) ba[i] = rng_get_byte();
+  for (i = 0; i < ba.length; ++i) ba[i] = rng_get_byte();
 }
 
 function SecureRandom() {}
